# printer-api

./: Cargo.toml  Config.toml  Printers.toml  index.html
src/: api.rs  auth_key.rs  config.rs  jobs.rs  main.rs
