[package]
name = "printer-api"
version = "0.1.0"
authors = ["Alex Dekau <alex.potatofarms@gmail.com>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
ws = "0.7.3"
env_logger = "0.4"
postgres = "0.15"
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
serde_json = "1.0"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"

